--- a/wercker.yml
+++ b/wercker.yml
@@ -1,13 +1,15 @@
 box: debian
 build:
   steps:
-    - install-packages:
-        packages: git
-    - script:
-        name: download theme
-        code: |
-            $(git clone https://github.com/gcushen/hugo-academic ./themes/hugo-academic)
     - arjen/hugo-build:
         version: "0.14"
         theme: hugo-academic
         flags: --buildDrafts=true
+deploy:
+  steps:
+    - install-packages:
+        packages: git ssh-client
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        domain: http://mishaknyazev.github.io
+        basedir: public
